test/asm/unterminated-interpolation.asm
def x = 10
println "{d:x", "!"
println "{v:x", "?"
println x, {d:x
